--- a/src/components/UI/LoadingScreen.css
+++ b/src/components/UI/LoadingScreen.css
@@ -1,16 +1,19 @@
 .ldsFacebook {
-  display: inline-block;
+  display: flex;
   position: relative;
-  width: 100vw;
-  height: 100px;
+  width: 100%;
+  height: 150px;
+  justify-content: center;
+  align-items: center;
 }
 .ldsFacebook div {
   display: inline-block;
-  position: absolute;
-  margin-left: 43vw;
+
+  margin-top: 30px;
+  margin-left: 10px;
   width: 16px;
   background: green;
-  animation: lds-facebook 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
+  animation: ldsFacebook 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
 }
 .ldsFacebook div:nth-child(1) {
   left: 8px;
